--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -62,6 +62,7 @@ h5{
 #detailedForm{
 	display:none;
 	overflow:auto;
+	height:350px;
 }
 
 #weightInput{
@@ -75,11 +76,11 @@ h5{
 }
 /* CSS FOR DETAILED MEAL ENTRY FORM */
 #results {
-	width:400px;
+	width:655px;
 	height:100px;
 	position:relative;
-	top:0px;
 	margin:10px auto;
+	margin-left:25px;
 	border:solid #cccccc 1px;
 	overflow: scroll;
 	background:white;
@@ -88,7 +89,8 @@ h5{
 }
 
 #results_wrapper{
-	padding-left:20px;
+	padding-left:0px;
+	width:600px;
 }
 
 
@@ -101,7 +103,12 @@ h5{
 	display:block;
 	position:relative;
 	margin: 30px auto 0px auto;
+	overflow:scroll;
+	float:left;
 }
+
+
+
 
 
 .box-table-b th {
@@ -129,9 +136,12 @@ h5{
 
 #btn_additem{
 	float:right;
+
+	position:relative;
+	left:80px;
 	height:25px;
 	width:80px;
-	margin:0px 000px 0px 0px;
+	margin:0px 0px 0px 0px;
 }
 
 .delete_btn{
@@ -249,7 +259,13 @@ h5{
 }
 
 #search_query{
-	width:300px;
+	width:200px;
+}
+
+#bar{
+ float:left;
+ overflow:auto;
+ margin-left:7px;
 }
 
 #fd{
@@ -261,17 +277,20 @@ h5{
 }
 
 #selector{
-	float:left;
+	float:right;
 	margin-top:0;
 	margin-left:20px;
+	position:relative;
+	left:40px;
 }
 
 #searcherbar{
-	width:400px;
+	width:670px;
+	height:40px;
 	margin:0px;
 	margin-left:20px;
 	display:inline;
-
+	float:left;
 }
 
 #FoodSearch{
@@ -279,7 +298,7 @@ h5{
 }
 
 
-#prev_autogenDialog,#back_button_addmeal, #prev_optionselect, #prev_choosemeal, #back_btn_addweight{
+#prev_autogenDialog, #prev_optionselect, #prev_choosemeal, #back_btn_addweight{
 	position:absolute;
 	left:30px;
 	bottom:30px;
@@ -287,9 +306,33 @@ h5{
 	color:#333;
 }
 
+#back_button_addmeal{
+	float:right;
+	background:#ddd;
+	color:#333;
+	position:absolute;
+	top:0px;
+	right:30px;
+	margin:0;
+	top:20px;
+}
+
 #prev_autogenDialog:hover, #back_button_addmeal:hover, #prev_optionselect:hover, #prev_choosemeal:hover, #back_btn_addweight:hover {
 	background:#d5d5d5;
+}
 
+
+
+
+#btn_addmeal{
+	margin-right:0px;
+	position:absolute;
+	top:70px;
+	right:30px;
+}
+
+#data_container{
+	position:relative;
 }
 
 
@@ -297,4 +340,25 @@ h5{
 	position:absolute;
 	top:10px;
 	right:10px;
+}
+
+
+.otherselect{
+	background:#8da9ff;
+	height:25px;
+	padding:3px;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+	font-size:10pt;
+	float:left;
+	margin-left:20px;
+	border:1px #999 solid;
+	border:none;
+	color:#eee;
+
+}
+
+.otherselect:hover {
+	background:#7d99ef;
 }
