--- a/view/Calendar.html
+++ b/view/Calendar.html
@@ -292,10 +292,11 @@
 					</table>
 				<button id='btn_addmeal' class="next">Add Meal</button>
 				<button id='back_button_addmeal' class="next"> Back </button>
+				<button id='btn_delete_meal' class="next">Delete Meal</button>
 				</div>
 
 
-				<button id='btn_delete_meal'>Delete Meal</button>
+
 				<!-- <button id=' -->
 				
 
