--- a/view/Calendar.html
+++ b/view/Calendar.html
@@ -171,7 +171,7 @@
 			<!-- FOOD SEARCH FORM -->
 			<div id="autogenDialog">
 				<div id="mealandbutton">
-					<h5>Auto generate your meal?</h5>
+					<h5>Auto generate all meals for this day?</h5>
 
 					<form>
 						<label><span class="rad"><input class ="mealType" type="radio" name="group1" id="yes_auto" value="yes_auto" checked><span class="m" >Yes</span></span></label>
@@ -236,7 +236,7 @@
 							</div>
 
 								<button id="showPrevious" class="otherselect">Show Previous Meal</button>
-								<button id="showHistory" class="otherselect">Show Suggested Meal</button>
+								<button id="showHistory" class="otherselect">Show Suggested Foods</button>
 
 
 								<div id="food_choose"></div>
